# nitrux-plymouth-theme

./: .travis.yml  CMakeLists.txt  README.md  travis-build.sh
debian/: changelog  control  copyright  install  postinst  prerm
haze-logo/: haze-logo.plymouth  haze-logo.script
haze-text/: haze-text.plymouth  haze-text.plymouth.in
nomad-logo/: nomad-logo.plymouth
nomad-text/: nomad-text.plymouth.in
themes/: CMakeLists.txt
themes/bgrt/: bgrt.plymouth
themes/nitrux-logo/: nitrux-logo.plymouth
themes/nitrux-text/: nitrux-text.plymouth  nitrux-text.plymouth.in
themes/nomad-logo/: CMakeLists.txt
themes/nomad-text/: .CMakeLists.txt.kate-swp  CMakeLists.txt  nomad-text.plymouth
usr/share/plymouth/themes/nitrux-logo/: nitrux-logo.script
