install(FILES box.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
install(FILES bullet.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
install(FILES entry.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
install(FILES lock.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
install(FILES logo.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
install(FILES nomad-logo.plymouth DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
install(FILES nomad-logo.script DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
install(FILES preview.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
install(FILES text.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plymouth/themes/nomad-logo)
